; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/mic/cosm/extr_cosm_scif_server.c_cosm_update_mic_status.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/mic/cosm/extr_cosm_scif_server.c_cosm_update_mic_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cosm_device = type { i64 }

@MIC_NOP = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cosm_device*)* @cosm_update_mic_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cosm_update_mic_status(%struct.cosm_device* %0) #0 {
  %2 = alloca %struct.cosm_device*, align 8
  store %struct.cosm_device* %0, %struct.cosm_device** %2, align 8
  %3 = load %struct.cosm_device*, %struct.cosm_device** %2, align 8
  %4 = getelementptr inbounds %struct.cosm_device, %struct.cosm_device* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @MIC_NOP, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %17

8:                                                ; preds = %1
  %9 = load %struct.cosm_device*, %struct.cosm_device** %2, align 8
  %10 = load %struct.cosm_device*, %struct.cosm_device** %2, align 8
  %11 = getelementptr inbounds %struct.cosm_device, %struct.cosm_device* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = call i32 @cosm_set_shutdown_status(%struct.cosm_device* %9, i64 %12)
  %14 = load i64, i64* @MIC_NOP, align 8
  %15 = load %struct.cosm_device*, %struct.cosm_device** %2, align 8
  %16 = getelementptr inbounds %struct.cosm_device, %struct.cosm_device* %15, i32 0, i32 0
  store i64 %14, i64* %16, align 8
  br label %17

17:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @cosm_set_shutdown_status(%struct.cosm_device*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
